--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,4 @@
-= javascript_include_tag 'autoReload'
+-# = javascript_include_tag 'autoReload'  自動更新の読み込みを停止
 .wrapper
   = render "side_bar"
   = render "main_chat"
